--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -8,51 +8,71 @@
     <link rel="stylesheet" href="../styles/main.css" type="text/css">
 </head>
 <body>
+    <section id="option">
+        <div class="overlay">
+            <div class="topnav">
+                <span class="hover-effect">Cuisine</span>
+                <ul class="cuisine-list">
+                    <li>Indian Cuisine</li>
+                    <li>Mexican Cuisine</li>
+                    <li>Italian Cuisine</li>
+                    <li>American Cuisine</li>
+                    <li>Japanese Cuisine</li>
+                    <li>Thai Cuisine</li>
+                    <li>French Cuisine</li>
+                </ul>
+                <span class="hover-effect">Chats</span>
+                <ul class="chat-list">
+                    <li>Pani puri</li>
+                    <li>Dahi puri</li>
+                    <li>pakora</li>
+                    <li>Bhel Puri</li>
+                    <li>Samosa</li>
+                    <li>Pav Bhaji</li>
+                    <li>Kachori</li>
+                </ul>
+                <span class="hover-effect">Health</span>
+                <ul class="health-list">
+                    <li>Pani puri</li>
+                    <li>Dahi puri</li>
+                    <li>pakora</li>
+                    <li>Bhel Puri</li>
+                    <li>Samosa</li>
+                    <li>Pav Bhaji</li>
+                    <li>Kachori</li>
+                </ul>
+                <span class="hover-effect">Drinks</span>
+            </div>
+        </div>
+    </section>
     
-        
-       <div class="topnav">
-        <span class="hover-effect">Cuisine</span>
-        <ul class="cuisine-list">
-            <li>Indian Cuisine</li>
-            <li>Mexican Cuisine</li>
-            <li>Italian Cuisine</li>
-            <li>American Cuisine</li>
-            <li>Japanese Cuisine</li>
-            <li>Thai Cuisine</li>
-            <li>French Cuisine</li>
-
-        </ul>
-        <span class="hover-effect">Chats</span>
-        <ul class="chat-list">
-            <li>Pani puri</li>
-            <li>Dahi puri</li>
-            <li>pakora</li>
-            <li>Bhel Puri</li>
-            <li>Samosa</li>
-            <li>Pav Bhaji</li>
-            <li>Kachori</li>
-        </ul>
-        <span class="hover-effect">Health Food</span>
-        <ul class="health-list">
-            <li>Pani puri</li>
-            <li>Dahi puri</li>
-            <li>pakora</li>
-            <li>Bhel Puri</li>
-            <li>Samosa</li>
-            <li>Pav Bhaji</li>
-            <li>Kachori</li>
-        </ul>
-
-
-        <span class="hover-effect">Drinks</span>
-    </div>
-        
+    <section id="image">
+        <div class="image-container">
+           <!--<img src="https://i.pinimg.com/736x/16/92/b3/1692b3193ce168983c05e8f42b2997c6.jpg" alt="Image 1">!-->
+        <img src="https://i.pinimg.com/236x/41/c7/bf/41c7bf3422cff4a9ac1fb49f4d545513.jpg" alt="Image 2">
+        <img src="https://i.pinimg.com/236x/31/ff/84/31ff84f7c8829b1015ea01cb56941dec.jpg" alt="Image 3">
+        <img src="https://i.pinimg.com/564x/07/99/14/079914beef726cfd972aec979d402ffe.jpg" alt="Image 4">
+        <img src="https://i.pinimg.com/564x/ae/6a/89/ae6a8905175f194f6c7acaf5f544074b.jpg" alt="Image 5">
+        <img src="https://i.pinimg.com/564x/a4/50/5e/a4505e1869f5c52bfb25eb2762b8da48.jpg" alt="Image 6">
+        <img src="https://i.pinimg.com/564x/0d/a8/92/0da8922b83852e4fb9076aec7ab37352.jpg" alt="Image 7">
+        <img src="https://i.pinimg.com/564x/64/21/bc/6421bcf01e098e100cc51e968c3eda08.jpg" alt="Image 8">
+        <img src="https://i.pinimg.com/564x/32/54/2a/32542adde502c9a9ee95f12de5d3c465.jpg" alt="Image 9">
+        <img src="https://i.pinimg.com/564x/55/4d/39/554d3908a017ceed1c3a09178c73f7d0.jpg" alt="Image 10">
+        <img src="https://i.pinimg.com/564x/39/be/e0/39bee073fa16e9906976cdb509050611.jpg" alt="Image 11">
+        <img src="https://i.pinimg.com/236x/dc/51/2b/dc512bba1afdf7af83eab9c55d615675.jpg" alt="Image 12">
+        <img src="https://i.pinimg.com/564x/e7/8f/11/e78f115a7f0f8412522279bac9247b38.jpg" alt="Image 13">
+        <img src="https://i.pinimg.com/564x/18/a7/aa/18a7aae1e33b44654e4678de31f0d56d.jpg" alt="Image 14">
+        <img src="https://i.pinimg.com/564x/a3/58/e8/a358e8ac617056fdd0a6ccb010c2a683.jpg" alt="Image 15">
+        </div>
+    </section> 
+    
+    <div class="left">
         <div class="bar">
-            <h1>Good Morning Guys!</h1>
+            <h1>Hello Guys!</h1>
             <input type="text" placeholder="Search">
         </div>
-    
-      <!--<abbr Item1="Cuisine" Item2="Chats" Item3="Health Food"Item4="Drinks"></abbr>!-->
-      
-    </body>
+    </div>
+
+   
+</body>
 </html>
